--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="bottom-container">
         <a class="footer-link" href="https://www.facebook.com/aniket.sawhney">Facebook</a><br><br>
-        <a class="footer-link" href="https://anikatesawhney.github.io/anikatesawhney/">Website</a>
+        <a class="footer-link" href="https://github.com/AnikateSawhney/CSS">Website</a>
         <p class="copyright">©️ 2020 ANIKATE SAWHNEY @ ANIROCKS</p>
 </body>
 </html>
